# movieMaker

./: README.md
include/: movie.h
moviemaker/: CMakeLists.txt
moviemaker/src/: reader.cpp  test.cpp
src/: reader.cpp  test.cpp  writer.cpp
